added gifs to grid and pages, changed the dataSection at  the figmacommunity  in the Footer

--- a/site/src/Sass/blocks/_Plugin.scss
+++ b/site/src/Sass/blocks/_Plugin.scss
@@ -68,6 +68,7 @@
     &:disabled {
       background: var(--clr-black-3);
       color: var(--clr-black-3);
+      cursor: not-allowed;
     }
   }
   &__info {
