--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -34,6 +34,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  background: var(--clr-white);
 }
 *::selection {
   background: var(--clr-green);
