--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -7,6 +7,7 @@
 =============================================*/
 html {
   height: 100%;
+  width: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
   overflow-x: hidden;
@@ -32,6 +33,7 @@ html {
 body {
   font-family: var(--ff-primary);
   height: 100%;
+  width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: var(--clr-white);
