--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -33,6 +33,7 @@ html {
 body {
   font-family: var(--ff-primary);
   height: 100%;
+  min-height: 100vh;
   width: 100%;
   overflow-x: hidden;
   scroll-behavior: smooth;
