accesibility changes-only li in ul as direct childs,aria labels to icon buttons and icon links,color of subtitle in main.added new plugin to data. flex-wrap to plugins svg in main.

--- a/site/src/Sass/blocks/_Main.scss
+++ b/site/src/Sass/blocks/_Main.scss
@@ -13,7 +13,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: var(--spacing-sm);
+    gap: var(--spacing-md) var(--spacing-sm);
+    flex-wrap: wrap;
 
     img {
       inline-size: 10vmin;
@@ -24,7 +25,7 @@
       @media (prefers-reduced-motion: no-preference) {
         animation: jumping 1s ease-in-out alternate infinite;
         //! change if number of plugins is being updated
-        @for $i from 1 through 6 {
+        @for $i from 1 through 7 {
           &:nth-child(n + #{$i}) {
             animation: jumping 1s ease-in-out alternate infinite $i * 0.2s;
           }
