--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -7,7 +7,6 @@
 =============================================*/
 html {
   height: 100%;
-  width: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
   overflow-x: hidden;
@@ -36,7 +35,6 @@ body {
   font-family: var(--ff-primary);
   height: 100%;
   min-height: 100vh;
-
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: var(--clr-white);
@@ -44,7 +42,7 @@ body {
   flex-direction: column;
 }
 #root {
-  flex-grow: 1;
+  height: 100%;
 }
 *::selection {
   background: var(--clr-green);
