--- a/site/src/Sass/base/_base.scss
+++ b/site/src/Sass/base/_base.scss
@@ -9,7 +9,6 @@ html {
   height: 100%;
   scroll-behavior: smooth;
   scrollbar-width: thin;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -35,6 +34,7 @@ body {
   font-family: var(--ff-primary);
   height: 100%;
   overflow-x: hidden;
+  overflow-y: auto;
   scroll-behavior: smooth;
   background: var(--clr-white);
 }
